Fix z-index issue

--- a/app/styles/_general.scss
+++ b/app/styles/_general.scss
@@ -18,7 +18,7 @@ article:after {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 3;
+  z-index: 1;
   opacity: 0.3;
   pointer-events: none;
   background: url(../../src/img/_commons/background.png);
